syntax = "proto3";
package crowlabs.eta.booth;

import "gogoproto/gogo.proto";
import "eta/booth/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/crow-labs/eta/x/booth/types";

// GenesisState defines the booth module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
