syntax = "proto3";
package crowlabs.eta.booth;

option go_package = "github.com/crow-labs/eta/x/booth/types";

message GuiltyVote {
  uint64 voteId = 1; 
  uint64 pollId = 2; 
  uint64 voterId = 3; 
  bool buyerGuilt = 4; 
  bool sellerGuilt = 5; 
  
}

